# better-fs-copy

./: .gitignore  CMakeLists.txt  README.md  better_copy_fs.cc  binding.gyp  package-lock.json  package.json
lib/: binding.js
src/: better_fs_copy.cc
test/: test_binding.js
